src/styles/_genomeView.scss
// _genomeView.scss partial file

div.genome-view-container {
  position: -webkit-sticky;
  position: sticky;
  top: 0;

  .progress {
    display: none;
    height: 23px;
    left: 50%;
    position: absolute;
    top: 393px; // (height of circos plot / 2) + genome-view margin-top
    transform: translate(-50%, 0);
    width: 40%;

    .progress-bar {
      background-color: #3498db;
      color: black;
      display: none;
      font-size: 10px;
      transition: none;
    }
  }

  svg#genome-view {
    margin-left: 20px;
    margin-top: 35px;

    .cs-layout > g {
      cursor: pointer;
    }

    &.dark-mode {
      background-color: #222222;

      + .progress {
        .progress-bar {
          color: #f3f3f3;
        }
      }
    }

    &.blur-view {
      filter: blur(4px);

      + .progress {
        display: flex;

        .progress-bar {
          display: flex;
        }
      }

      .cs-layout > g {
        cursor: default;
      }
    }
  }

  svg#track-legend {
    margin-top: 5px;

    &.dark-mode {
      background-color: #222222;
      border-radius: 20px;
      margin-top: 10px;
    }
  }
}

div.circos-tooltip {
  &.dark-mode {
    background: #ffffff;
    color: #000000;
  }

  &.outside {
    border: 2px solid #ea4848;
    left: 63% !important;
    position: fixed;
    top: 665px !important; // genome-view height
    transform: translate(-37%, 0) !important;
  }
}

